Collecting data from form

--- a/public/form.html
+++ b/public/form.html
@@ -27,22 +27,22 @@
 
         <div class="firstName">
             <label for="">Name</label><br>
-            <input type="text" name="firstName" required>
+            <input type="text" name="firstName" >
         </div>
 
         <div class="middleName">
             <label for="">Middle Name</label><br>
-            <input type="text" name="middleName" required>
+            <input type="text" name="middleName" >
         </div>
 
         <div class="lastName">
             <label for="">Last Name</label><br>
-            <input type="text" name="lastName" required>
+            <input type="text" name="lastName" >
         </div>
 
         <div class="country">
             <label for="">Country</label><br>
-            <input type="text" name="country" required>
+            <input type="text" name="country" >
         </div>
 
         <div class="phone">
